--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -704,9 +704,9 @@ tx_ultimate_touch:
 
     - switch.turn_on: vibra
 
-    - binary_sensor.template.publish:
-        id: long_press
-        state: ON
+#   - binary_sensor.template.publish:
+#       id: long_press
+#       state: ON
 
     - lambda: >
         ESP_LOGD("tx_ultimate_touch.on_long_touch_release", "Long Touch Release Position: %d / State: %d", touch.x, touch.state);
@@ -1117,6 +1117,7 @@ script:
       - script.execute: refresh_led_default
 
 # TODO dim the right LEDs based on the relay_count
+# make another util function to return the LED for a given button
   - id: led_on_swipe_left
     mode: restart
     then:
@@ -1223,6 +1224,7 @@ script:
           effect: ${multi_touch_effect}
 
 
+# TODO kill this
   - id: led_on_long_touch
     mode: restart
     then:
